fix: show demo button instead of free trial demo on deader top section on mobile devices

--- a/assets/styles/layouts/Header.scss
+++ b/assets/styles/layouts/Header.scss
@@ -409,9 +409,8 @@ body {
 					margin: 0;
 				}
 
-				&.Button--outline {
+				&.Button--full {
 					display: flex;
-					width: 6.25em;
 				}
 
 				span {
